<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Panic Security</string>
    <string name="app_name_short">Panic!</string>

    <!-- Facebook ID -->
    <string name="facebook_app_id">1595876667140341</string>

    <!-- Error messages-->
    <string name="server_error">Fail to connect to server!</string>
    <string name="couchbase_error">Error opening Couchbase Database</string>
    <string name="crime_type_not_found_error">Fail to found crime type</string>

    <!-- Crime types -->
    <string name="assault_crime">Assault</string>
    <string name="auto_theft_crime">Auto-theft</string>
    <string name="burglary_crime">Burglary</string>
    <string name="shop_lifting_crime">Shop-lifting</string>
    <string name="suspicious_activity_crime">Suspicious Activity</string>
    <string name="homicide_crime">Homicide</string>
    <string name="vandalism_crime">Vandalism</string>
    <string name="drugs_crime">Drugs</string>
    <string name="other_crime">Other</string>

    <!-- Menu navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="invalid_user">Invalid email user</string>

    <!-- Menu items -->
    <string name="home">Home</string>
    <string name="user_profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="my_reports">My reports</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About us</string>
    <string name="more">More Options</string>
    <string name="sign_out">Sign Out</string>

    <!-- User profile -->
    <string name="user_profile_short_desc">\"Safety is everyone\'s job.\"</string>
    <string name="user_profile_location">Location:</string>
    <string name="user_profile_email">Email:</string>
    <string name="user_profile_phone_number">Phone number:</string>
    <string name="user_profile_gender">Gender:</string>
    <string name="user_profile_birthday">Birthday:</string>
    <string name="user_profile_number_reports">Number of reports:</string>

    <!-- Reports information -->
    <string name="report_info_date">Date:</string>
    <string name="report_info_type">Type:</string>
    <string name="report_info_description">Description:</string>
    <string name="report_info_latitude">Latitude:</string>
    <string name="report_info_longitude">Longitude:</string>
    <string name="report_info_go_location">Go to location</string>

    <!-- Snackbar messages -->
    <string name="you_are_friends">You are already friends</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="friend_request_accepted">Friend request accepted</string>
    <string name="friend_request_rejected">Friend request rejected</string>
    <string name="request_pending_acceptance">Request pending acceptance</string>
    <string name="friend_removed">Friend removed</string>

    <!-- Gender -->
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>

    <!-- Login -->
    <string name="login_text">Log into your Panic! account</string>
    <string name="username_login_text">username@example.com</string>
    <string name="password_login_text">password</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_link">No account yet? Create one</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="required">Required.</string>

    <!-- SignUp -->
    <string name="sign_up_text">Create a new Panic! account</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_username">username@example.com</string>
    <string name="sign_up_password">password</string>
    <string name="sign_up_password_conf">confirm password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="login_link">Already a member? Login</string>
    <string name="password_match">Passwords do not match</string>

    <!-- Reset Password -->
    <string name="reset_password_text">Reset your password</string>
    <string name="emailSent">E-mail sent to </string>
    <string name="send_email">Send e-mail</string>

    <!-- Google maps -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="share_location">SHARE MY LOCATION</string>
    <string name="stop_share_location">STOP SHARING MY LOCATION</string>

    <!-- Reports -->
    <string name="accept">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email_not_verified">Email %s is not verified</string>
    <string name="verify_email">Verify your email.</string>
    <string name="without_reports">Oops! You need to make some reports</string>
    <string name="report_done">Report Done</string>
    <string name="date">Date of crime</string>
    <string name="create_report">Create a new report</string>
    <string name="report_type">Type</string>
    <string name="report_date_title">Date</string>
    <string name="report_description_title">Description</string>
    <string name="crime_description">Describe what happened</string>

    <string-array name="crimes_array">
        <item>Assault</item>
        <item>Auto-theft</item>
        <item>Burglary</item>
        <item>Drugs</item>
        <item>Homicide</item>
        <item>Shop-lifting</item>
        <item>Suspicious Activity</item>
        <item>Vandalism</item>
        <item>Other</item>
    </string-array>

    <!-- Friends -->
    <string name="title_friend_requests">Friend requests</string>
    <string name="title_friends">Friends</string>
    <string name="without_friends">Oops! You need to make some friends</string>

    <!-- Dialog Friend -->
    <string name="share_location_with_friend">Share location</string>
    <string name="remove_friend">Remove friend</string>

    <!-- Dialog Friends -->
    <string name="cancel_text_button">Cancel</string>
    <string name="share_text_button">Share</string>

</resources>
