<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.panic.security.controllers.login_sign_up_module.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".controllers.main_module.MainActivity">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_panic" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login_text"
            android:textColor="@color/whiteColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_text"
            android:focusable="true"
            android:hint="@string/sign_up_name"
            android:textColor="@color/whiteColor"
            android:backgroundTint="@color/whiteColor"
            android:inputType="textPersonName"
            android:textColorHint="@color/text_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/sign_up_last_name"
            android:textColor="@color/whiteColor"
            android:textColorHint="@color/text_hint"
            android:backgroundTint="@color/whiteColor"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:focusable="true"
            android:hint="@string/sign_up_phone_number"
            android:backgroundTint="@color/whiteColor"
            android:textColorHint="@color/text_hint"
            android:textSize="20sp"
            android:layout_below="@+id/last_name"
            android:inputType="phone"
            android:maxLength="14"
            android:lines="1"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/sign_up_username"
            android:inputType="textEmailAddress"
            android:textColor="@color/whiteColor"
            android:backgroundTint="@color/whiteColor"
            android:textColorHint="@color/text_hint"
            android:textSize="20sp"
            android:layout_below="@+id/phone_number"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/sign_up_password"
            android:inputType="textPassword"
            android:backgroundTint="@color/whiteColor"
            android:textColor="@color/whiteColor"
            android:textColorHint="@color/text_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/sign_up_password_conf"
            android:inputType="textPassword"
            android:backgroundTint="@color/whiteColor"
            android:textColor="@color/whiteColor"
            android:textColorHint="@color/text_hint"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/password_confirmation"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="signUp"
            android:text="@string/sign_up_button_text"
            android:textColor="@color/whiteColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:onClick="showLogIn"
            android:text="@string/login_link"

            android:textColor="@color/whiteColor" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/whiteColor"
            />

    </RelativeLayout>


</ScrollView>
