<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/whiteColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        android:background="@color/whiteColor">

        <TextView
            android:id="@+id/report_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:text="@string/create_report" />

        <TextView
            android:id="@+id/report_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/report_title"
            android:text="@string/report_date_title" />

        <TextView
            android:id="@+id/report_crime_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/report_date_title"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="HERE GOES A DATE" />

        <TextView
            android:id="@+id/report_type"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/report_type"
            android:layout_marginTop="15dp"
            android:layout_below="@id/report_crime_date"/>

        <Spinner
            android:id="@+id/crimes_spinner"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/report_type"
            android:layout_marginTop="5dp"
            android:textSize="40sp"
            android:textColor="@color/black"/>

        <ProgressBar
            android:id="@+id/friends_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/report_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/report_description_title"
            android:layout_marginTop="15dp"
            android:layout_below="@id/crimes_spinner"/>

        <EditText
            android:id="@+id/crime_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/report_description"
            android:layout_marginTop="5dp"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:background="@color/gray_line"
            android:padding="10dp"
            android:hint="@string/crime_description"
            android:imeActionId="@+id/commit_crime_button"
            android:imeOptions="actionNext"
            android:maxLines="10"
            android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine" />

        <Button
            android:id="@+id/commit_crime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/create_report"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/whiteColor"/>

    </RelativeLayout>

</ScrollView>
