<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/whiteColor">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_with_gray_line_bottom"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="12dp"
                android:text="@string/report_info_date" />
            <TextView
                android:id="@+id/report_info_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="12dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_with_gray_line_bottom"
            android:orientation="vertical"
            android:layout_below="@+id/date">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="12dp"
                android:text="@string/report_info_type" />
            <TextView
                android:id="@+id/report_info_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="12dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_with_gray_line_bottom"
            android:orientation="vertical"
            android:layout_below="@+id/type">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="12dp"
                android:text="@string/report_info_description" />
            <TextView
                android:id="@+id/report_info_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="12dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_with_gray_line_bottom"
            android:orientation="vertical"
            android:layout_below="@+id/description">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="12dp"
                android:text="@string/report_info_latitude" />
            <TextView
                android:id="@+id/report_info_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="12dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_with_gray_line_bottom"
            android:orientation="vertical"
            android:layout_below="@+id/longitude">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="12dp"
                android:text="@string/report_info_longitude" />
            <TextView
                android:id="@+id/report_info_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="12dp"
                android:paddingBottom="8dp"
                android:clickable="true"
                android:text="0"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <Button
            android:id="@+id/go_to_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/report_info_go_location"
            android:textColor="@color/whiteColor" />

    </RelativeLayout>

</ScrollView>
