<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.panic.security.controllers.login_sign_up_module.ResetPasswordActivity">



    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:src="@mipmap/ic_panic" />

    <TextView
        android:id="@+id/password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_logo"
        android:text="@string/reset_password_text"
        android:textColor="@color/whiteColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/sign_up_username"
        android:layout_centerHorizontal="true"
        android:textColor="@color/whiteColor"
        android:textColorHighlight="#ffff25e6"
        android:textColorHint="@color/text_hint"
        android:textSize="20sp"
        android:layout_centerVertical="true" />

    <!--<Button
        android:id="@+id/password_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentStart="true"
        android:text="@string/send_email"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:layout_below="@+id/email"
        />-->
    <Button
        android:id="@+id/password_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send_email"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true" />


    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="@dimen/close_button"
        android:layout_height="@dimen/close_button"
        android:background="@drawable/round_button"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:src="@drawable/ic_dialog_close_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
